tests/script_errors/double_const/error.txt
Error: 
    1 | const one = 1;
    2 | const one = two;
      | ^^^^^^^^^^^^^^^ Can't declare the constant `one` twice